# nvidia-vaapi-driver

./: .gitignore  COPYING  Makefile  README  README.md  av1.c  chrome.sh  cross-i386.txt  cuviddec.h  export-buf.c  export-buf.h  extract_headers.sh  h264.c  h264.h  headers.in  hevc.c  install.sh  meson.build  meson_options.txt  mpeg2.h  mpeg4.c  mpeg4.h  nvenc-helper.service  sysdeps.h  test.sh  vabackend.c  vabackend.h  vc1.c  vc1.h  vp8.c  vp8.h  vp9.c  vp9.h
.github/workflows/: install-clang.sh  ubuntu.yml
docs/: install-fedora.md  install-ubuntu.md
nvidia-include/: nvidia-drm-ioctl.h  nvidia.h  nvos.h
samples/: gensamples.sh  index.html
src/: YUVtoRGB.cu  YUVtoRGB.ptx  av1.c  backend-common.c  backend-common.h  common.h  export-buf.c  export-buf.h  external-surface.c  external-surface.h  h264.c  h264_encode.c  hevc.c  hevc_encode.c  jpeg.c  kernels.c  kernels.h  list.c  list.h  mpeg2.c  mpeg4.c  nvenc-helper.c  nvenc-ipc-client.c  nvenc-ipc.h  nvenc.c  nvenc.h  stats.c  stats.h  vabackend.c  vabackend.h  vc1.c  vp8.c  vp9.c  vpp.c  x11.c  x11.h
src/direct/: direct-export-buf.c  nv-driver.c  nv-driver.h
src/encode/: encode_buffer.c  encode_buffer.h  encode_common.c  encode_common.h  encode_driver.c  encode_driver.h  encode_image.c  encode_image.h  encode_loader.c  encode_loader.h  encode_pipeline.c  encode_pipeline.h  encode_surface.c  encode_surface.h  encode_va.c  encode_va.h  h264_encode.c  h264_encode.h
subprojects/: ff-nvcodec-headers.wrap
subprojects/packagefiles/ff-nvcodec-headers/: meson.build
tests/: driver-artifact-smoke.sh  driver-exported-symbol-smoke.sh  driver-runtime-vaapi-smoke.sh  test_common.h  test_encode.c  test_encode_config.c  test_gstreamer.sh  test_ipc_fuzz.c
